force-app/main/default/objects/CIBE_Section__mdt/CIBE_Section__mdt.object-meta.xml
<CustomObject>
    <description>Tabla que contiene las diferentes secciones que se abre y cierran, mostrando al abrirse todos los links.</description>
    <label>CIBE Section</label>
    <pluralLabel>CIBE Sections</pluralLabel>
</CustomObject>