force-app/main/default/objects/CIBE_Section__mdt/fields/CIBE_Active__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIBE Active</label>
    <type>Checkbox</type>
</CustomField>