force-app/main/default/objects/CIBE_Section__mdt/fields/CIBE_Collapse__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Collapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIBE Collapse</label>
    <type>Checkbox</type>
</CustomField>