force-app/main/default/objects/CIBE_Section__mdt/fields/CIBE_Collumns__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Collumns__c</fullName>
    <label>CIBE Collumns</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>