force-app/main/default/objects/CIBE_Section__mdt/fields/CIBE_Order__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Order__c</fullName>
    <label>CIBE_Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>