force-app/main/default/objects/CIBE_Section__mdt/fields/CIBE_Setting__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Setting__c</fullName>
    <label>CIBE Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>