force-app/main/default/objects/CIBE_Section__mdt/fields/CIBE_Title__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Title__c</fullName>
    <label>CIBE Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>